# search_engine

./: .gitignore  CMakeLists.txt  README.md  TEST_ANLEITUNG.md  TODO.txt  build.bat  build_gui.bat  compile_all.bat  create_portable_package.bat  launch_gui.ps1  main.cpp  readme  run_gui.bat
examples/code/: example.cpp
examples/notes/: cpp_basics.txt  memory_management.md  programming_concepts.txt  stl_containers.txt
include/: document_store.hpp  file_scanner.hpp  index.hpp  search.hpp  tokenizer.hpp  util.hpp
notes_examples/markdown/: search_engine.md
scripts/: FINAL_BUILD.bat  README.md  build_gui_fixed.bat  build_gui_simple.bat  build_gui_verbose.bat  build_verbose.bat
src/: document_store.cpp  file_scanner.cpp  index.cpp  main.cpp  main_gui.cpp  search.cpp  tokenizer.cpp  util.cpp
